--- a/.eslintrc
+++ b/.eslintrc
@@ -2,8 +2,7 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true,
-    "jest": true
+    "node": true
   },
   "parserOptions": {
     "ecmaFeatures": {
@@ -16,21 +15,17 @@
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "plugins": ["react", "react-hooks", "jsx-a11y", "prettier", "jest"],
-  "extends": [
-    "plugin:react/recommended",
-    "airbnb",
-    "prettier",
-    "plugin:jest/recommended",
-    "plugin:jest/style"
-  ],
+  "plugins": ["react", "react-hooks", "jsx-a11y", "prettier"],
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
   "rules": {
-    "jest/prefer-strict-equal": "error",
-    "jest/prefer-to-have-length": "warn",
     "prettier/prettier": "error",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/jsx-filename-extension": "off",
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "function-declaration" }
+    ],
     "react/jsx-props-no-spreading": "off",
     "import/no-extraneous-dependencies": [
       "error",
@@ -59,7 +54,7 @@
       "files": "**/*.+(ts|tsx)",
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": ["./tsconfig.json"]
       },
       "plugins": ["@typescript-eslint/eslint-plugin"],
       "extends": [
@@ -72,6 +67,7 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off",
         "no-use-before-define": [0],
+        "func-names": ["warn", "as-needed"],
         "@typescript-eslint/no-use-before-define": [1],
         "import/no-unresolved": 0,
         "import/no-extraneous-dependencies": [
