--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
     "postinstall": "husky install",
-    "test": "jest",
     "commit": "cz",
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
@@ -30,56 +29,47 @@
     ]
   },
   "dependencies": {
-    "@types/styled-components": "5.1.15",
-    "gatsby": "4.2.0",
-    "gatsby-background-image": "1.5.3",
-    "gatsby-image": "3.11.0",
-    "gatsby-plugin-sharp": "4.2.0",
-    "gatsby-plugin-styled-components": "5.2.0",
-    "gatsby-source-filesystem": "4.2.0",
-    "gatsby-transformer-sharp": "4.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.3.3",
-    "tsconfig-paths-webpack-plugin": "3.5.2"
+    "gatsby": "^4.2.0",
+    "gatsby-background-image": "^1.5.3",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
+    "tsconfig-paths-webpack-plugin": "^3.5.2"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.16.0",
-    "@babel/preset-typescript": "7.16.0",
-    "@commitlint/cli": "15.0.0",
-    "@commitlint/config-conventional": "15.0.0",
-    "@testing-library/dom": "8.11.1",
-    "@testing-library/jest-dom": "5.15.0",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.3",
-    "@types/node": "16.11.9",
-    "@types/react": "17.0.35",
-    "@types/react-dom": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
-    "@typescript-eslint/parser": "5.4.0",
-    "babel-jest": "27.3.1",
-    "babel-preset-gatsby": "2.2.0",
-    "commitizen": "4.2.4",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "2.5.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jest": "25.2.4",
-    "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "gh-pages": "3.2.3",
-    "husky": "7.0.4",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "27.3.1",
-    "lint-staged": "12.0.2",
-    "prettier": "2.4.1",
-    "ts-jest": "27.0.7",
-    "typescript": "4.5.2"
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
+    "@types/node": "^16.11.10",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "babel-preset-gatsby": "^2.2.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.5.0",
+    "typescript": "^4.5.2"
   },
   "config": {
     "commitizen": {
