--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Joakim Petersson
+name: "Joakim Petersson"
+title: "Joakim Petersson"
+author: "Joakim Petersson"
 email: petersson.joakim@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -26,13 +28,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "joakimpetersson.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  JoakimPetersson
+github:  
+  username: JoakimPetersson
 
 # Build settings
-theme: minima
+remote_theme: lamccloskey/jekyll-theme-blogfolio
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
